ok we got it now its all enviroment variables based
